--- a/style.css
+++ b/style.css
@@ -32,4 +32,10 @@ section#display {
 }
 
 section#options {
+  padding: 1rem;
+}
+
+section#options > div {
+  background: white;
+  box-shadow: 32px 0 6px rgba(0,0,0,0.15);
 }
