--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ section#options {
 
 section#options > div {
   background: white;
-  box-shadow: 32px 0 6px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 32px rgba(0,0,0,0.15);
 }
 
 section#options li {
