--- a/style.css
+++ b/style.css
@@ -37,11 +37,12 @@ section#display {
 }
 
 section#options {
-  padding: 1rem;
+  padding: 2rem;
 }
 
 section#options > div {
   background: white;
+  border-radius: 3px;
   box-shadow: 0 3px 32px rgba(0,0,0,0.15);
 }
 
