--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@ section#options > div {
   box-shadow: 0 3px 32px rgba(0,0,0,0.15);
 }
 
+section#options h2 {
+  margin: 0;
+  padding: 0;
+}
+
+section#options span {
+  margin: 0;
+  padding: 0;
+}
+
 section#options li {
   margin: 0;
   padding: 0;
