--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 }
 
 header {
-  background: red;
+  background: #263238;
+  color: white;
   height: var(--header-height);
   position: fixed;
     left: 0;
