--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html {
 
 body {
   margin: 0;
+  min-height: 100%;
   padding: 0;
 }
 
@@ -34,7 +35,10 @@ main {
 }
 
 section#display {
+  align-items: center;
+  display: flex;
   flex: 1 0 0;
+  justify-content: center;
 }
 
 section#options {
