--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ section#options > div {
   background: white;
   border-radius: 5px;
   box-shadow: var(--shadow);
+  padding: 0.5rem 0;
 }
 
 section#options h2 {
@@ -99,5 +100,5 @@ section#options details {
 
 section#options summary {
   list-style: none;
-  padding: 0.5rem 0;
+  padding: 0 0 0.5rem 0;
 }
