--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ header {
     top: 0;
 }
 
+header a {
+  color: white;
+  text-decoration: none;
+}
+
+header a:hover {
+  text-decoration: underline;
+}
+
 header h1 {
   font-size: 1rem;
   font-weight: 400;
