--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 * {
   font-family: 'Poppins', sans-serif;
 }
@@ -75,7 +75,7 @@ section#options > div {
 
 section#options h2 {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0;
   padding: 0;
 }
@@ -89,6 +89,8 @@ section#options span {
 }
 
 section#options li {
+  font-size: 1rem;
+  font-weight: 400;
   margin: 0;
   padding: 0;
 }
