--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ section#options ::marker {
 
 section#options details {
   border-bottom: 1px solid rgba(0,0,0,0.15);
+  cursor: pointer;
   padding: 0.5rem 2rem;
 }
 
