--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     left: 0;
     right: 0;
     top: 0;
+  z-index: 100;
 }
 
 header a {
@@ -122,6 +123,19 @@ section#options details[open] summary {
 section#options summary {
   list-style: none;
   padding: 0;
+}
+
+#loading {
+  align-items: center;
+  background: red;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+  z-index: 50;
 }
 
 @media (orientation: landscape) {
