--- a/style.css
+++ b/style.css
@@ -127,8 +127,9 @@ section#options summary {
 
 #loading {
   align-items: center;
-  background: red;
+  background: white;
   display: flex;
+  font-size: 2rem;
   justify-content: center;
   position: fixed;
     bottom: 0;
@@ -136,6 +137,10 @@ section#options summary {
     right: 0;
     top: 0;
   z-index: 50;
+}
+
+#loading span {
+  opacity: 0.75;
 }
 
 @media (orientation: landscape) {
