--- a/style.css
+++ b/style.css
@@ -140,7 +140,21 @@ section#options summary {
 }
 
 #loading span {
+  background-color: rgba(0,0,0,0.1);
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  border-radius: 1000px;
   opacity: 0.75;
+  padding: 1rem;
+  text-align: center;
+  transition: background-size 1.5s ease-in-out;
+  width: 80vw;
+}
+
+#loading span:hover {
+  background-size: 100% 100%;;
 }
 
 @media (orientation: landscape) {
