--- a/style.css
+++ b/style.css
@@ -171,9 +171,9 @@ section#options summary {
 
 @keyframes loadingProgress {
   0% {
-    background-size: (0% 100%);
+    background-size: 0% 100%;
   }
   100% {
-    background-size: (100% 100%);
+    background-size: 100% 100%;
   }
 }
