--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ section#options summary {
 }
 
 #loading span {
-  animation: 1.5s ease-in-out 0s 1 loadingProgress;
+  animation: 2s ease-in-out 1s 1 loadingProgress;
   background-color: rgba(0,0,0,0.1);
   background-image: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%);
   background-position: 0 100%;
@@ -172,6 +172,9 @@ section#options summary {
 @keyframes loadingProgress {
   0% {
     background-size: 0% 100%;
+  }
+  60% {
+    background-size: 90% 100%;
   }
   100% {
     background-size: 100% 100%;
