--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ section#options summary {
 #loading {
   align-items: center;
   background: white;
-  display: flex;
+  display: none; /* flex */
   font-size: 2rem;
   justify-content: center;
   position: fixed;
