--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ section#display {
   justify-content: center;
 }
 
-section#display canvas {
+#canvas-00 {
+  border: 1px dashed magenta;
 }
 
 #canvas-01 {
